<resources>
    <string name="app_name">Tasty Catering</string>
    <string name="food_image">food image</string>
    <string name="place_order">Place Order</string>
    <string name="kg">Kg</string>
    <string name="person">Person</string>
    <string name="drawer_open">Drawer Opend</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="my_orders">My orders</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected">selected</string>
    <string name="rs">Rs:</string>
    <string name="book_now">Book Now</string>
    <string name="back_button">back button</string>
    <string name="home">Home</string>
    <string name="my_cart">My Cart</string>
    <string name="quantity">Quantity</string>
    <string name="per_person">Per Person</string>
    <string name="address">Address</string>
    <string name="date_and_time_to_deliver">Date And Time to Deliver</string>
    <string name="set_time">Set Time</string>
    <string name="house_name">House Name</string>
    <string name="local_area_street_name">Local Area/Street Name</string>
    <string name="city_name">City Name</string>
    <string name="pincode">Pincode</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="mobile_no">Mobile No</string>
    <string name="save">Save</string>
    <string name="alternate_mobile_no">Alternate Mobile No</string>
    <string name="type_quantity">Type quantity</string>
    <string name="total_price">Total Price:</string>
    <string name="order_id">Order id:</string>
    <string name="time">Time:</string>
    <string name="edit_details">Edit Details</string>
    <string name="status">Status:</string>
    <string name="date">Date:</string>
    <string name="offers_image">Offers image</string>
    <string name="_kg">/Kg</string>
    <string name="contact_us_icon">contact us icon</string>
    <string name="call_us">Call us</string>
    <string name="email_us">Email us</string>
    <string name="whatsapp_us">WhatsApp us</string>

</resources>