<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item android:id="@+id/myOrdersFragment"
        android:icon="@drawable/my_orders_icon"
        android:title="@string/my_orders"/>

    <item android:id="@+id/myCartFragment"
        android:icon="@drawable/my_orders_icon"
        android:title="@string/my_cart"/>

    <item android:id="@+id/my_account"
        android:icon="@drawable/my_account_icon"
        android:title="@string/my_account"/>

    <item android:id="@+id/settings"
        android:icon="@drawable/setting_icon"
        android:title="@string/settings"/>

    <item android:id="@+id/contactUsFragment"
        android:icon="@drawable/contact_us_icon"
        android:title="@string/contact_us"/>

    <item android:id="@+id/feedback"
        android:icon="@drawable/feedback_icon"
        android:title="@string/feedback"/>

</menu>