<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="order"
            type="com.example.tastycatering.data.model.Order" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        android:layout_margin="3dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/order_id"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{order.order_id}"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_"
                app:layout_constraintStart_toEndOf="@+id/txt_" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{order.food.name}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txt_"
                app:layout_constraintTop_toBottomOf="@+id/txt_" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@{order.qty}"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_food_name"
                app:layout_constraintStart_toEndOf="@+id/txt_food_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{order.unit}"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_food_name"
                app:layout_constraintStart_toEndOf="@+id/materialTextView10" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/txt_food_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_food_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Monday 23 june 2020"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView11"
                app:layout_constraintStart_toEndOf="@+id/materialTextView11" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/time"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_date"
                app:layout_constraintStart_toEndOf="@+id/txt_date" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="06:00 AM"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView12"
                app:layout_constraintStart_toEndOf="@+id/materialTextView12" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_price"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/materialTextView11"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView11" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{order.total_price.toString()}"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView14"
                app:layout_constraintStart_toEndOf="@+id/materialTextView14" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/total_price"
                app:layout_constraintStart_toStartOf="@+id/materialTextView12" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{order.status}"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/materialTextView13"
                app:layout_constraintStart_toEndOf="@+id/materialTextView13" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/fui_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_status" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/edit_details"
                app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
                app:layout_constraintTop_toTopOf="@+id/btn_cancel" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>